@@ -4,6 +4,9 @@ Changelog
 3.0b6 - Unreleased
 ------------------
 
+- Let the `generatedMutatorWrapper` work directly on schemaextender fields.
+  [hannosch]
+
 - Replaced `has_key` with `in` checks using the `__contains__` protocol.
   [hannosch]
 
